--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progresso No campo</title>
+    <title>Alimentos No campo</title>
     <link rel="shortcut icon" href="Img/FavIcon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
                 <img id="logo" src="Img/logo.png" alt="logo">
                 <li>Início</li>
                 <li>Progresso</li>
-                <li>Oportunidade</li>
+                <li>curiosidade</li>
             </ul>
         </div>
     </header>
@@ -40,6 +40,11 @@
             <h2>O milho é plantado em fileiras espaçadas, com sementes enterradas a uma profundidade específica para promover um bom estabelecimento das plantas. Agricultores monitoram de perto o crescimento das plantas, aplicando fertilizantes conforme necessário para garantir uma alta produtividade.</h2>
             <h2>Quando as espigas de milho atingem a maturidade, são colhidas por colheitadeiras adaptadas. O milho colhido é então transportado para instalações de processamento, onde é desdobrado em grãos para diversos usos, como alimentação animal, produção de etanol e ingredientes para alimentos processados.</h2>
         </div>
+    </div>
+    <div class="section_quinta">
+        <h1>café</h1>
+        <h2>As três etapas do processo – limpeza, secagem e descasca </h2>
+        <h2> são descritas abaixo. Primeiro, o café colhido costuma ser submetido a separação e limpeza, para a retirada de cerejas imaturas, demasiado maduras ou danificadas, e para a remoção de sujidades, terra, gravetos e folhas.</h2>
     </div>
 </body>
 </html>
