--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <p>Abaixo explicando sobre o processo de cada plantio, desde o campo até a cidade!</p>
             <p>🢃</p>
         </div>
+        <h1 class="selection_primeira"><img class="milho" src="images.jpeg" alt="avatar da fran"></h1>
         <div class="section_segunda">
             <h1>Trigo</h1>
             <h2>No campo, o trigo é cuidadosamente plantado em vastas extensões rurais. Agricultores selecionam as melhores variedades de trigo e preparam o solo para garantir condições ideais de crescimento. Durante o ciclo de cultivo, eles monitoram de perto a saúde das plantas, ajustando a irrigação e aplicando fertilizantes conforme necessário para promover um crescimento vigoroso e uma boa produção.</h2>
