--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
             <p>Abaixo explicando sobre o processo de cada plantio, desde o campo até a cidade!</p>
             <p>🢃</p>
         </div>
-        <h1 class="selection_primeira"><img class="milho" src="images.jpeg" alt="avatar da fran"></h1>
         <div class="section_segunda">
             <h1>Trigo</h1>
             <h2>No campo, o trigo é cuidadosamente plantado em vastas extensões rurais. Agricultores selecionam as melhores variedades de trigo e preparam o solo para garantir condições ideais de crescimento. Durante o ciclo de cultivo, eles monitoram de perto a saúde das plantas, ajustando a irrigação e aplicando fertilizantes conforme necessário para promover um crescimento vigoroso e uma boa produção.</h2>
             <h2>Quando o trigo atinge o ponto ideal de maturação, os agricultores utilizam colheitadeiras especializadas para colher os campos. Após a colheita, o trigo é transportado para instalações de armazenamento e processamento, onde é limpo, seco e armazenado em condições controladas para manter sua qualidade.</h2>
+            <h1 class="selection_primeira"><img class="milho" src="images.jpeg" alt="avatar da fran"></h1>
         </div>
         <div class="section_terceira">
             <h1>Soja</h1>
             <h2>A soja é cultivada em rotação de culturas ou em áreas dedicadas. Agricultores plantam sementes de soja em fileiras espaçadas, cuidando para garantir uma distribuição uniforme. Durante o crescimento, monitoram a nutrição das plantas e controlam pragas e doenças para garantir uma colheita saudável.</h2>
             <h2>Quando as vagens de soja estão maduras, máquinas especiais colhem a cultura. A soja é então transportada para unidades de processamento, onde é limpa, separada e transformada em diversos produtos, como óleo de soja, proteínas vegetais e farelo.</h2>
+            <h1 class="selection_segunda"><img class="soja" src="2.jpeg" alt="avatar da fran"></h1>
+            <h1 class="selection_segunda"><img class="soja" src="3.jpeg" alt="avatar da fran"></h1>
         </div>
         <div class="section_quarta">
             <h1>Milho</h1>
