--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
         <h2>As três etapas do processo – limpeza, secagem e descasca </h2>
         <h2> são descritas abaixo. Primeiro, o café colhido costuma ser submetido a separação e limpeza, para a retirada de cerejas imaturas, demasiado maduras ou danificadas, e para a remoção de sujidades, terra, gravetos e folhas.</h2>
     </div>
+   </div>
 </body>
 </html>
