--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1>Milho</h1>
             <h2>O milho é plantado em fileiras espaçadas, com sementes enterradas a uma profundidade específica para promover um bom estabelecimento das plantas. Agricultores monitoram de perto o crescimento das plantas, aplicando fertilizantes conforme necessário para garantir uma alta produtividade.</h2>
             <h2>Quando as espigas de milho atingem a maturidade, são colhidas por colheitadeiras adaptadas. O milho colhido é então transportado para instalações de processamento, onde é desdobrado em grãos para diversos usos, como alimentação animal, produção de etanol e ingredientes para alimentos processados.</h2>
-            <h1 class="selection_quarta"><img class="milho" src="4.jpeg" alt="avatar da fran"></h1>
+            <h1 class="selection_quarta"><img class="milho" src="4.jpg" alt="avatar da fran"></h1>
         </div>
     </div>
     <div class="section_quinta">
