--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h2>As três etapas do processo – limpeza, secagem e descasca </h2>
         <h2> são descritas abaixo. Primeiro, o café colhido costuma ser submetido a separação e limpeza, para a retirada de cerejas imaturas, demasiado maduras ou danificadas, e para a remoção de sujidades, terra, gravetos e folhas.</h2>
         <h1 class="selection_quinta"><img class="café" src="5.png" alt="avatar da fran"></h1>
+        <h1 class="selection_quinta"><img class="café" src="6.webp" alt="avatar da fran"></h1>
     </div>
    </div>
 </body>
