--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h2>No campo, o trigo é cuidadosamente plantado em vastas extensões rurais. Agricultores selecionam as melhores variedades de trigo e preparam o solo para garantir condições ideais de crescimento. Durante o ciclo de cultivo, eles monitoram de perto a saúde das plantas, ajustando a irrigação e aplicando fertilizantes conforme necessário para promover um crescimento vigoroso e uma boa produção.</h2>
             <h2>Quando o trigo atinge o ponto ideal de maturação, os agricultores utilizam colheitadeiras especializadas para colher os campos. Após a colheita, o trigo é transportado para instalações de armazenamento e processamento, onde é limpo, seco e armazenado em condições controladas para manter sua qualidade.</h2>
             <h1 class="selection_segunda"><img class="trigo" src="images.jpeg" alt="avatar da fran"></h1>
+            <h1 class="selection_segunda"><img class="trigo" src="8.jpg" alt="avatar da fran"></h1>
         </div>
         <div class="section_terceira">
             <h1>Soja</h1>
